# CMake-template-for-STM32-VSCode

./: .gitignore  .mxproject  CMakeLists.txt  README.md  STM32F413CHUx_FLASH.ld  VENTA_Template.ioc
Core/Inc/: main.h
Core/Src/: main.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
modules/: CMakeLists.txt
modules/inc/: myLib.h  ui.h
modules/src/: myLib.c  ui.c
